--- a/customer-service/pom.xml
+++ b/customer-service/pom.xml
@@ -15,6 +15,13 @@
 		<sonar.exclusions>**/model/entity/*.java</sonar.exclusions>
 	</properties>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+	</dependencies>
+
 	<build>
 		<plugins>
 			<plugin>
