--- a/.github/workflows/master_customer-service-fmu.yml
+++ b/.github/workflows/master_customer-service-fmu.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
-          name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          name: customer-service-app
+          path: '${{ github.workspace }}/customer-service/target/*.jar'
 
   deploy:
     runs-on: ubuntu-latest
@@ -41,7 +41,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
-          name: java-app
+          name: customer-service-app
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
